Prepare page for 2018, with initial goal update

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                     	<div class="home_info">
                             <h2>Olja Lyn</h2>
                             <div class="text">
-                              <p>I 2016 har bidrag via Olja Lyn finansiert kontrakter til Ola Sætherbakken, Benjamin Nyheim, Jonas Hammer, Dag Andreas Balto og Torstein Andersen Aase.</p>
+                              <p>Olja Lyn er et supporterdrevet initiativ som har som mål å samle inn midler til toppfotballsatsingen i Lyn. Ved å tegne seg for et månedlig beløp kan alle supportere av klubben bidra til å sponse laget i sitt hjerte.</p>
 
-                              <p>Ubrukte midler fra 2016 overføres til 2017, og vil sammen med de midler vi klarere å reise i 2017 gå til å styrke stallen og det sportslige tilbudet til vårt a-lag. Målet er direkte opprykk. Da MÅ vi ha det beste laget. Kun ETT lag rykker opp til 2. divisjon.</p>
+                              <p>Takket være stor giverglede i 2017, vil om lag 125 000 kroner overføres til neste år, i tillegg til nye innsamlede midler. Dette er helt avgjørende i jakten på forsterkninger, samt for å holde på nøkkelspillere fra årets sesong.</p>
 
-                              <p>Kontraktene vil fortsatt være ned mot minimum av hva som skal til for å defineres som proffkontrakt, fire til seks tusen kroner i måneden.</p>
+                              <p>Kontraktene vil fortsatt være ned mot minimum av hva som skal til for å defineres som proffkontrakt, fire-fem tusen kroner i måneden.</p>
 
                               <p>Vi håper du ønsker å bli med. Sammen kan vi sikre et Lyn-lag som etter alle solemerker vil by opp til fest på Bislett til våren, og ikke minst sørge for at gjensynet med 2. divisjon blir triveligere enn avskjeden. </p>
 
@@ -101,7 +101,7 @@
                                 <li>Sølv - 5.000 kr eller 500 kr /12 mnd</li>
                                 <li>Bronse - 2.000 kr eller 200 kr /12 mnd</li>
                               </ul>
-                              <p>Gaver til idrettslag opp til kr 30.000 er fradragsberettiget på ligningen påfølgende år. Alle som har bidratt i 2016 vil få en separat epost om fremgangsmåte.</p>
+                              <p>Gaver til idrettslag er fradragsberettiget på ligningen påfølgende år. Alle som har bidratt i 2017 vil få en separat epost om fremgangsmåte.</p>
                             </div>
                         </div>
                     </div>
@@ -122,48 +122,38 @@
                 <div class="row">
                   <div class="col-md-12">
                     <h4 class="title">Spillere</h4>
-                    <p>Prosjektet vil omfatte en gruppe på opp til syv spillere, avhengig av hvor
+                    <p>Prosjektet vil omfatte en gruppe på fem-seks spillere, avhengig av hvor
                     mange bidrag som kommer inn.<br />Aktuelle navn holdes hemmelig til midler er sikret,
                     men vi føler oss trygge på at dette er spillere som kan forsterke Lyn både i 3. og 2. divisjon!</p>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/felix.jpg" alt="Felix Boe-Tangen" width="110" height="150" style="border-radius: 5px" /><br />
-                        <h5>Felix Boe-Tangen</h5>
+                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Avsløres senere..?</h5>
                     </div>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/ola.jpg" alt="Ola Sætherbakken" width="110" height="150" style="border-radius: 5px" /><br />
-                        <h5>Ola Sætherbakken</h5>
+                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Avsløres senere..?</h5>
                     </div>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/benjamin.jpg" alt="Benjamin Nessjø Nyheim" width="110" height="150" style="border-radius: 5px" /><br />
-                        <h5>Benjamin Nyheim</h5>
+                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Avsløres senere..?</h5>
                     </div>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/fadel.jpg" alt="Fadel Karbon" width="110" height="150" style="border-radius: 5px" /><br />
-                        <h5>Fadel Karbon</h5>
+                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Avsløres senere..?</h5>
                     </div>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/petter.jpg" alt="Petter Høvik" width="110" height="150" style="border-radius: 5px" /><br />
-                        <h5>Petter Høvik</h5>
+                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Avsløres senere..?</h5>
                     </div>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/rune.jpg" alt="Rune Isaksen" width="110" height="150" style="border-radius: 5px" /><br />
-                        <h5>Rune Isaksen</h5>
-                    </div>
-                    <div style="float: left; margin-right: 20px;">
-                        <img src="players/adrian.jpg" alt="Adrian Jonuzi Møller" width="110" height="150" style="border-radius: 5px" /><br />
-                        <h5>Adrian Møller</h5>
-                    </div>
-                    <div style="float: left; margin-right: 20px;">
-                        <img src="players/conde.jpg" alt="Amadou Koulibaly Conde" width="110" height="150" style="border-radius: 5px" /><br />
-                        <h5>Amadou Conde</h5>
+                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Avsløres senere..?</h5>
                     </div>
                     <div class="clear"></div>
                   </div>
                   <hr />
                   <div class="col-md-12">
                     <h4 class="title">Innsamlede midler</h4>
-                    <p>Olja Lyns første mål er å samle inn kr 500.000 for å stille slagkraftig både neste år og i årene som kommer.</p>
-                    <p>Dette målet er nådd, og vårt bonusmål er nå å kunne samle inn ytterligere kr 100.000.</p>
                     <p>Vi takker for alle bidrag!</p>
                     <div class="shortcode_diagramm_shortcode diagramm">
                       <ul class="skills_list">
@@ -171,27 +161,14 @@
                               <div class="diagram_bar">
                                   <h6>Hovedmål</h6>
                                   <div class="skill_div-wrapper">
-                                    <div class="skill_div" style="background-color: rgb(195, 20, 43); width: 100%;" data-percent="100"></div>
+                                    <div class="skill_div" style="background-color: rgb(195, 20, 43); width: 38%;" data-percent="38"></div>
                                   </div>
-                                  <h6 style="right: 0%; display: block;" class="skill_percent">100%</h6>
+                                  <h6 style="right: 62%; display: block;" class="skill_percent">37,93%</h6>
                               </div>
                           </li>
                       </ul>
                     </div>
-                    <div class="shortcode_diagramm_shortcode diagramm">
-                      <ul class="skills_list">
-                          <li class="skill_li">
-                              <div class="diagram_bar">
-                                  <h6>Bonusmål</h6>
-                                  <div class="skill_div-wrapper">
-                                    <div class="skill_div" style="background-color: rgb(195, 20, 43); width: 56%;" data-percent="56"></div>
-                                  </div>
-                                  <h6 style="right: 44%; display: block;" class="skill_percent">56%</h6>
-                              </div>
-                          </li>
-                      </ul>
-                    </div>
-                    <p>Status: kr 557 608. Sist oppdatert: 21. mars kl. 11:00</p>
+                    <p>Status: kr 151 700. Sist oppdatert: 4. desember kl. 21:00</p>
                   </div>
                 </div>
 
