--- a/index.html
+++ b/index.html
@@ -126,24 +126,24 @@
                     mange bidrag som kommer inn.<br />Aktuelle navn holdes hemmelig til midler er sikret,
                     men vi føler oss trygge på at dette er spillere som kan forsterke Lyn både i 3. og 2. divisjon!</p>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
-                        <h5>Avsløres senere..?</h5>
+                        <img src="players/orhan.png" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Orhan Simsek</h5>
                     </div>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
-                        <h5>Avsløres senere..?</h5>
+                        <img src="players/benjamin.png" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Benjamin Nessjø Nyheim</h5>
                     </div>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
-                        <h5>Avsløres senere..?</h5>
+                        <img src="players/julian.png" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Julian Veen Uldal</h5>
                     </div>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
-                        <h5>Avsløres senere..?</h5>
+                        <img src="players/rune.png" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Rune Isaksen</h5>
                     </div>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
-                        <h5>Avsløres senere..?</h5>
+                        <img src="players/anwar.png" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Anwar Pellegrino</h5>
                     </div>
                     <div style="float: left; margin-right: 20px;">
                         <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
@@ -161,14 +161,23 @@
                               <div class="diagram_bar">
                                   <h6>Hovedmål</h6>
                                   <div class="skill_div-wrapper">
-                                    <div class="skill_div" style="background-color: rgb(195, 20, 43); width: 96%;" data-percent="96"></div>
+                                    <div class="skill_div" style="background-color: rgb(195, 20, 43); width: 100%;" data-percent="100"></div>
                                   </div>
-                                  <h6 style="right: 4%; display: block;" class="skill_percent">95.89%</h6>
+                                  <h6 style="right: 0%; display: block;" class="skill_percent">100%</h6>
+                              </div>
+                          </li>
+                          <li class="skill_li">
+                              <div class="diagram_bar">
+                                  <h6>Bonusmål</h6>
+                                  <div class="skill_div-wrapper">
+                                    <div class="skill_div" style="background-color: rgb(195, 20, 43); width: 92%;" data-percent="92"></div>
+                                  </div>
+                                  <h6 style="right: 4%; display: block;" class="skill_percent">91.53%</h6>
                               </div>
                           </li>
                       </ul>
                     </div>
-                    <p>Status: kr 527 396. Sist oppdatert: 21. desember kl. 23:00</p>
+                    <p>Status: kr 537 296. Sist oppdatert: 7. februar kl. 22:00</p>
                   </div>
                 </div>
 
