--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <div class="text">
                               <p>Olja Lyn er et supporterdrevet initiativ som har som mål å samle inn midler til toppfotballsatsingen i Lyn. Ved å tegne seg for et månedlig beløp kan alle supportere av klubben bidra til å sponse laget i sitt hjerte.</p>
 
-                              <p>Takket være stor giverglede i 2017, vil om lag 125 000 kroner overføres til neste år, i tillegg til nye innsamlede midler. Dette er helt avgjørende i jakten på forsterkninger, samt for å holde på nøkkelspillere fra årets sesong.</p>
+                              <p>Takket være stor giverglede i 2018, vil om lag 170 000 kroner overføres til neste år, i tillegg til nye innsamlede midler. Dette er helt avgjørende i jakten på forsterkninger, samt for å holde på nøkkelspillere fra årets sesong.</p>
 
                               <p>Kontraktene vil fortsatt være ned mot minimum av hva som skal til for å defineres som proffkontrakt, fire-fem tusen kroner i måneden.</p>
 
@@ -101,7 +101,7 @@
                                 <li>Sølv - 5.000 kr eller 500 kr /12 mnd</li>
                                 <li>Bronse - 2.000 kr eller 200 kr /12 mnd</li>
                               </ul>
-                              <p>Gaver til idrettslag er fradragsberettiget på ligningen påfølgende år. Alle som har bidratt i 2017 vil få en separat epost om fremgangsmåte.</p>
+                              <p>Gaver til idrettslag er fradragsberettiget på ligningen påfølgende år. Alle som har bidratt i 2018 vil få en separat epost om fremgangsmåte.</p>
                             </div>
                         </div>
                     </div>
@@ -126,24 +126,24 @@
                     mange bidrag som kommer inn.<br />Aktuelle navn holdes hemmelig til midler er sikret,
                     men vi føler oss trygge på at dette er spillere som kan forsterke Lyn både i 3. og 2. divisjon!</p>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/orhan.png" alt="" width="150" height="150" style="border-radius: 5px" /><br />
-                        <h5>Orhan Simsek</h5>
+                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Avsløres senere..?</h5>
                     </div>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/benjamin.png" alt="" width="150" height="150" style="border-radius: 5px" /><br />
-                        <h5>Benjamin Nessjø Nyheim</h5>
+                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Avsløres senere..?</h5>
                     </div>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/julian.png" alt="" width="150" height="150" style="border-radius: 5px" /><br />
-                        <h5>Julian Veen Uldal</h5>
+                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Avsløres senere..?</h5>
                     </div>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/rune.png" alt="" width="150" height="150" style="border-radius: 5px" /><br />
-                        <h5>Rune Isaksen</h5>
+                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Avsløres senere..?</h5>
                     </div>
                     <div style="float: left; margin-right: 20px;">
-                        <img src="players/anwar.png" alt="" width="150" height="150" style="border-radius: 5px" /><br />
-                        <h5>Anwar Pellegrino</h5>
+                        <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
+                        <h5>Avsløres senere..?</h5>
                     </div>
                     <div style="float: left; margin-right: 20px;">
                         <img src="players/silhouette.jpg" alt="" width="150" height="150" style="border-radius: 5px" /><br />
@@ -161,23 +161,14 @@
                               <div class="diagram_bar">
                                   <h6>Hovedmål</h6>
                                   <div class="skill_div-wrapper">
-                                    <div class="skill_div" style="background-color: rgb(195, 20, 43); width: 100%;" data-percent="100"></div>
+                                    <div class="skill_div" style="background-color: rgb(195, 20, 43); width: 44%;" data-percent="44"></div>
                                   </div>
-                                  <h6 style="right: 0%; display: block;" class="skill_percent">100%</h6>
-                              </div>
-                          </li>
-                          <li class="skill_li">
-                              <div class="diagram_bar">
-                                  <h6>Bonusmål</h6>
-                                  <div class="skill_div-wrapper">
-                                    <div class="skill_div" style="background-color: rgb(195, 20, 43); width: 92%;" data-percent="92"></div>
-                                  </div>
-                                  <h6 style="right: 4%; display: block;" class="skill_percent">91.53%</h6>
+                                  <h6 style="right: 56%; display: block;" class="skill_percent">44%</h6>
                               </div>
                           </li>
                       </ul>
                     </div>
-                    <p>Status: kr 537 296. Sist oppdatert: 7. februar kl. 22:00</p>
+                    <p>Status: kr 175 000. Sist oppdatert: 9. desember kl. 21:00</p>
                   </div>
                 </div>
 
